<resources>
    <string name="app_name">Parcial TP3</string>
    <string name="textRegister">Register</string>
    <string name="textConfig">Configuracion</string>
    <string name="btnLogin">INGRESAR</string>
    <string name="olvideContra">Olvidé la contraseña</string>
    <string name="premier">Premier</string>
    <string name="rentcar">RentCar</string>
    <string name="editTextTextEmailAddress">User name</string>
    <string name="btnMainEnter">Accede</string>
    <string name="editTextTextPassword">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_Profile">Perfil</string>
    <string name="slider_Configuration">Configuración</string>
    <string name="slider_Favorites">Favoritos</string>
    <string name="deportivos">Deportivos</string>
    <string name="suv">SUV</string>
    <string name="Electricos">ELÉCTRICOS</string>
    <string name="filtro">Filtro >|</string>

    <string name="bottom_Home">Home</string>
    <string name="bottom_Autos">Autos</string>
    <string name="bottom_Buscar">Buscar</string>
    <string name="bottom_Perfil">Perfil</string>
    <string name="Menu">Menu</string>
    <string name="Notificaciones">Notificaciones</string>

    <string name="labelGenerales">Generales</string>
    <string name="labelModoOscuro">Modo Oscuro</string>
    <string name="labelNotificaciones">Notificaciones</string>
    <string name="FotoPerfil">FotoPerfil</string>
</resources>