<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/fondo_login">

    <LinearLayout
        android:id="@+id/linearLayoutInicio"
        android:layout_width="380dp"
        android:layout_height="556dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="90dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <TextView
                android:id="@+id/textViewTituloPremier"
                android:layout_width="62dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#3330E5"
                android:fontFamily="@font/fira_sans_bold"
                android:gravity="center_horizontal"
                android:text="@string/premier"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTituloRentcar"
                android:layout_width="58dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#FFCC00"
                android:fontFamily="@font/fira_sans_bold"
                android:text="@string/rentcar"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeColor="@color/borders"
            app:boxStrokeErrorColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:counterOverflowTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_UserName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:hint="@string/editTextTextEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:hint="@string/editTextTextPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/olvidarContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvideContra"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="219dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="#212121"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/btnLogin"
            android:textSize="20sp"
            app:cornerRadius="200dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>